# MSF_LOAM

./: .clang-format  .gitignore  CMakeLists.txt  DevGuide.md  README.md  groups  package.xml  project.config
.github/workflows/: Dockerfile  ci.yml
cmake/: google-test.cmake
config/: lio-sam-config2.json
configs/: lio-sam-config2.json
doc/: before-read-the-docs.md  ceres-optimization-on-manifold.md  imu-preintegration.md  integration.md  online-sensor-paramter-estimation.md  quaternion-kinematics.md
docker/: run.sh
include/aloam_velodyne/: common.h  tic_toc.h
launch/: aloam_velodyne_VLP_16.launch  kitti_helper.launch  msf_loam_velodyne.launch  msf_loam_velodyne_HDL_32.launch  msf_loam_velodyne_HDL_64.launch  msf_loam_velodyne_VLP_16.launch
loam_velodyne/slam/: kitti_helper.cc  laserMapping.cpp  laserOdometry.cpp  laser_mapping.cc  laser_odometry.cc  lidarFactor.hpp  lidar_factor.h  scanRegistration.cpp
proto/: config.proto  msg.proto
rviz_cfg/: aloam_velodyne.rviz  msf_loam_velodyne.rviz
scripts/: preprocess_bag_file.py  validate_velodyne_cloud_in_bag.py
src/: calib_lidar_imu.cc  kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  lidarFactor.hpp  msf_loam_node.cc  scanRegistration.cpp
src/common/: bspline.h  bspline_test.cc  common.h  hybrid_grid.h  rigid_transform.h  tic_toc.h  time.cc  time.h  time2.h  time_def.cc  time_def.h  timestamped_pointcloud.h  type_conversion.h
src/slam/: hybrid_grid.cc  hybrid_grid.h  kitti_helper.cc  laser_mapping.cc  laser_mapping.h  laser_odometry.cc  laser_odometry.h  msg_conversion.cc  msg_conversion.h  scan_registration.cc  type_conversion.h
src/slam/estimator/: estimator.cc  estimator.h
src/slam/global/: global_optimization.cc  global_optimization.h
src/slam/gps_fusion/: gps_factor.h  gps_fusion.cc  gps_fusion.h  gps_fusion_test.cc
src/slam/imu_fusion/: imu_factor.cc  imu_factor.h  imu_tracker.cc  imu_tracker.h  initial_ex_rotation.cc  initial_ex_rotation.h  integration_base.cc  integration_base.h  parameters.h  pose_local_parameterization.cc  pose_local_parameterization.h  scan_undistortion.cc  scan_undistortion.h  types.h  utility.h  utility_test.cc
src/slam/local/: laser_mapping.cc  laser_mapping.h  laser_odometry.cc  laser_odometry.h
src/slam/local/scan_matching/: lidar_factor.cc  lidar_factor.h  mapping_scan_matcher.cc  mapping_scan_matcher.h  odometry_scan_matcher.cc  odometry_scan_matcher.h  scan_matcher.cc  scan_matcher.h
src/slam/loop_closure/: pose_graph_factor.h  sparse_pose_graph.cc  sparse_pose_graph.h
src/slam/map/: hybrid_grid.cc  hybrid_grid.h
src/slam/scan_matching/: lidar_factor.h  mapping_scan_matcher.cc  mapping_scan_matcher.h  odometry_scan_matcher.cc  odometry_scan_matcher.h
urdf/: backpack_3d.urdf
